[3.8] bpo-37034: Display argument name on errors with keyword arguments with Argument Clinic. (GH-13593). (cherry picked from commit 4901fe274bc82b95dc89bcb3de8802a3dfedab32)

Co-authored-by: Rémi Lapeyre <remi.lapeyre@henki.fr>